wwpdb/utils/nmr/cpp_src/GromacsMRParser.cpp

// Generated from /data/git/py-wwpdb_utils_nmr/wwpdb/utils/tests-nmr/antlr-grammars-v4.10/GromacsMRParser.g4 by ANTLR 4.13.2


#include "GromacsMRParserVisitor.h"

#include "GromacsMRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct GromacsMRParserStaticData final {
  GromacsMRParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GromacsMRParserStaticData(const GromacsMRParserStaticData&) = delete;
  GromacsMRParserStaticData(GromacsMRParserStaticData&&) = delete;
  GromacsMRParserStaticData& operator=(const GromacsMRParserStaticData&) = delete;
  GromacsMRParserStaticData& operator=(GromacsMRParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag gromacsmrparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<GromacsMRParserStaticData> gromacsmrparserParserStaticData = nullptr;

void gromacsmrparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (gromacsmrparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(gromacsmrparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<GromacsMRParserStaticData>(
    std::vector<std::string>{
      "gromacs_mr", "distance_restraints", "distance_restraint", "dihedral_restraints", 
      "dihedral_restraint", "orientation_restraints", "orientation_restraint", 
      "angle_restraints", "angle_restraint", "angle_restraints_z", "angle_restraint_z", 
      "position_restraints", "position_restraint", "number"
    },
    std::vector<std::string>{
      "", "'['", "']'", "'distance_restraints'", "'dihedral_restraints'", 
      "'orientation_restraints'", "'angle_restraints'", "'angle_restraints_z'", 
      "'position_restraints'"
    },
    std::vector<std::string>{
      "", "L_brkt", "R_brkt", "Distance_restraints", "Dihedral_restraints", 
      "Orientation_restraints", "Angle_restraints", "Angle_restraints_z", 
      "Position_restraints", "Intermolecular_interactions", "Integer", "Float", 
      "SHARP_COMMENT", "EXCLM_COMMENT", "SMCLN_COMMENT", "Simple_name", 
      "SPACE", "ENCLOSE_COMMENT", "SECTION_COMMENT", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  gromacsmrparserParserStaticData = std::move(staticData);
}

}

GromacsMRParser::GromacsMRParser(TokenStream *input) : GromacsMRParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GromacsMRParser::GromacsMRParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GromacsMRParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *gromacsmrparserParserStaticData->atn, gromacsmrparserParserStaticData->decisionToDFA, gromacsmrparserParserStaticData->sharedContextCache, options);
}

GromacsMRParser::~GromacsMRParser() {
  delete _interpreter;
}

const atn::ATN& GromacsMRParser::getATN() const {
  return *gromacsmrparserParserStaticData->atn;
}

std::string GromacsMRParser::getGrammarFileName() const {
  return "GromacsMRParser.g4";
}

const std::vector<std::string>& GromacsMRParser::getRuleNames() const {
  return gromacsmrparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& GromacsMRParser::getVocabulary() const {
  return gromacsmrparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GromacsMRParser::getSerializedATN() const {
  return gromacsmrparserParserStaticData->serializedATN;
}


//----------------- Gromacs_mrContext ------------------------------------------------------------------

GromacsMRParser::Gromacs_mrContext::Gromacs_mrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GromacsMRParser::Gromacs_mrContext::EOF() {
  return getToken(GromacsMRParser::EOF, 0);
}

std::vector<GromacsMRParser::Distance_restraintsContext *> GromacsMRParser::Gromacs_mrContext::distance_restraints() {
  return getRuleContexts<GromacsMRParser::Distance_restraintsContext>();
}

GromacsMRParser::Distance_restraintsContext* GromacsMRParser::Gromacs_mrContext::distance_restraints(size_t i) {
  return getRuleContext<GromacsMRParser::Distance_restraintsContext>(i);
}

std::vector<GromacsMRParser::Dihedral_restraintsContext *> GromacsMRParser::Gromacs_mrContext::dihedral_restraints() {
  return getRuleContexts<GromacsMRParser::Dihedral_restraintsContext>();
}

GromacsMRParser::Dihedral_restraintsContext* GromacsMRParser::Gromacs_mrContext::dihedral_restraints(size_t i) {
  return getRuleContext<GromacsMRParser::Dihedral_restraintsContext>(i);
}

std::vector<GromacsMRParser::Orientation_restraintsContext *> GromacsMRParser::Gromacs_mrContext::orientation_restraints() {
  return getRuleContexts<GromacsMRParser::Orientation_restraintsContext>();
}

GromacsMRParser::Orientation_restraintsContext* GromacsMRParser::Gromacs_mrContext::orientation_restraints(size_t i) {
  return getRuleContext<GromacsMRParser::Orientation_restraintsContext>(i);
}

std::vector<GromacsMRParser::Angle_restraintsContext *> GromacsMRParser::Gromacs_mrContext::angle_restraints() {
  return getRuleContexts<GromacsMRParser::Angle_restraintsContext>();
}

GromacsMRParser::Angle_restraintsContext* GromacsMRParser::Gromacs_mrContext::angle_restraints(size_t i) {
  return getRuleContext<GromacsMRParser::Angle_restraintsContext>(i);
}

std::vector<GromacsMRParser::Angle_restraints_zContext *> GromacsMRParser::Gromacs_mrContext::angle_restraints_z() {
  return getRuleContexts<GromacsMRParser::Angle_restraints_zContext>();
}

GromacsMRParser::Angle_restraints_zContext* GromacsMRParser::Gromacs_mrContext::angle_restraints_z(size_t i) {
  return getRuleContext<GromacsMRParser::Angle_restraints_zContext>(i);
}

std::vector<GromacsMRParser::Position_restraintsContext *> GromacsMRParser::Gromacs_mrContext::position_restraints() {
  return getRuleContexts<GromacsMRParser::Position_restraintsContext>();
}

GromacsMRParser::Position_restraintsContext* GromacsMRParser::Gromacs_mrContext::position_restraints(size_t i) {
  return getRuleContext<GromacsMRParser::Position_restraintsContext>(i);
}

std::vector<tree::TerminalNode *> GromacsMRParser::Gromacs_mrContext::L_brkt() {
  return getTokens(GromacsMRParser::L_brkt);
}

tree::TerminalNode* GromacsMRParser::Gromacs_mrContext::L_brkt(size_t i) {
  return getToken(GromacsMRParser::L_brkt, i);
}

std::vector<tree::TerminalNode *> GromacsMRParser::Gromacs_mrContext::Intermolecular_interactions() {
  return getTokens(GromacsMRParser::Intermolecular_interactions);
}

tree::TerminalNode* GromacsMRParser::Gromacs_mrContext::Intermolecular_interactions(size_t i) {
  return getToken(GromacsMRParser::Intermolecular_interactions, i);
}

std::vector<tree::TerminalNode *> GromacsMRParser::Gromacs_mrContext::R_brkt() {
  return getTokens(GromacsMRParser::R_brkt);
}

tree::TerminalNode* GromacsMRParser::Gromacs_mrContext::R_brkt(size_t i) {
  return getToken(GromacsMRParser::R_brkt, i);
}


size_t GromacsMRParser::Gromacs_mrContext::getRuleIndex() const {
  return GromacsMRParser::RuleGromacs_mr;
}


std::any GromacsMRParser::Gromacs_mrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GromacsMRParserVisitor*>(visitor))
    return parserVisitor->visitGromacs_mr(this);
  else
    return visitor->visitChildren(this);
}

GromacsMRParser::Gromacs_mrContext* GromacsMRParser::gromacs_mr() {
  Gromacs_mrContext *_localctx = _tracker.createInstance<Gromacs_mrContext>(_ctx, getState());
  enterRule(_localctx, 0, GromacsMRParser::RuleGromacs_mr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GromacsMRParser::L_brkt) {
      setState(37);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(28);
        distance_restraints();
        break;
      }

      case 2: {
        setState(29);
        dihedral_restraints();
        break;
      }

      case 3: {
        setState(30);
        orientation_restraints();
        break;
      }

      case 4: {
        setState(31);
        angle_restraints();
        break;
      }

      case 5: {
        setState(32);
        angle_restraints_z();
        break;
      }

      case 6: {
        setState(33);
        position_restraints();
        break;
      }

      case 7: {
        setState(34);
        match(GromacsMRParser::L_brkt);
        setState(35);
        match(GromacsMRParser::Intermolecular_interactions);
        setState(36);
        match(GromacsMRParser::R_brkt);
        break;
      }

      default:
        break;
      }
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    match(GromacsMRParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Distance_restraintsContext ------------------------------------------------------------------

GromacsMRParser::Distance_restraintsContext::Distance_restraintsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GromacsMRParser::Distance_restraintsContext::L_brkt() {
  return getToken(GromacsMRParser::L_brkt, 0);
}

tree::TerminalNode* GromacsMRParser::Distance_restraintsContext::Distance_restraints() {
  return getToken(GromacsMRParser::Distance_restraints, 0);
}

tree::TerminalNode* GromacsMRParser::Distance_restraintsContext::R_brkt() {
  return getToken(GromacsMRParser::R_brkt, 0);
}

std::vector<GromacsMRParser::Distance_restraintContext *> GromacsMRParser::Distance_restraintsContext::distance_restraint() {
  return getRuleContexts<GromacsMRParser::Distance_restraintContext>();
}

GromacsMRParser::Distance_restraintContext* GromacsMRParser::Distance_restraintsContext::distance_restraint(size_t i) {
  return getRuleContext<GromacsMRParser::Distance_restraintContext>(i);
}


size_t GromacsMRParser::Distance_restraintsContext::getRuleIndex() const {
  return GromacsMRParser::RuleDistance_restraints;
}


std::any GromacsMRParser::Distance_restraintsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GromacsMRParserVisitor*>(visitor))
    return parserVisitor->visitDistance_restraints(this);
  else
    return visitor->visitChildren(this);
}

GromacsMRParser::Distance_restraintsContext* GromacsMRParser::distance_restraints() {
  Distance_restraintsContext *_localctx = _tracker.createInstance<Distance_restraintsContext>(_ctx, getState());
  enterRule(_localctx, 2, GromacsMRParser::RuleDistance_restraints);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    match(GromacsMRParser::L_brkt);
    setState(45);
    match(GromacsMRParser::Distance_restraints);
    setState(46);
    match(GromacsMRParser::R_brkt);
    setState(48); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(47);
      distance_restraint();
      setState(50); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == GromacsMRParser::Integer);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Distance_restraintContext ------------------------------------------------------------------

GromacsMRParser::Distance_restraintContext::Distance_restraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GromacsMRParser::Distance_restraintContext::Integer() {
  return getTokens(GromacsMRParser::Integer);
}

tree::TerminalNode* GromacsMRParser::Distance_restraintContext::Integer(size_t i) {
  return getToken(GromacsMRParser::Integer, i);
}

std::vector<GromacsMRParser::NumberContext *> GromacsMRParser::Distance_restraintContext::number() {
  return getRuleContexts<GromacsMRParser::NumberContext>();
}

GromacsMRParser::NumberContext* GromacsMRParser::Distance_restraintContext::number(size_t i) {
  return getRuleContext<GromacsMRParser::NumberContext>(i);
}

tree::TerminalNode* GromacsMRParser::Distance_restraintContext::Simple_name() {
  return getToken(GromacsMRParser::Simple_name, 0);
}


size_t GromacsMRParser::Distance_restraintContext::getRuleIndex() const {
  return GromacsMRParser::RuleDistance_restraint;
}


std::any GromacsMRParser::Distance_restraintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GromacsMRParserVisitor*>(visitor))
    return parserVisitor->visitDistance_restraint(this);
  else
    return visitor->visitChildren(this);
}

GromacsMRParser::Distance_restraintContext* GromacsMRParser::distance_restraint() {
  Distance_restraintContext *_localctx = _tracker.createInstance<Distance_restraintContext>(_ctx, getState());
  enterRule(_localctx, 4, GromacsMRParser::RuleDistance_restraint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(GromacsMRParser::Integer);
    setState(53);
    match(GromacsMRParser::Integer);
    setState(54);
    match(GromacsMRParser::Integer);
    setState(55);
    match(GromacsMRParser::Integer);
    setState(56);
    match(GromacsMRParser::Integer);
    setState(57);
    number();
    setState(58);
    number();
    setState(59);
    number();
    setState(60);
    number();
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GromacsMRParser::Simple_name) {
      setState(61);
      match(GromacsMRParser::Simple_name);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Dihedral_restraintsContext ------------------------------------------------------------------

GromacsMRParser::Dihedral_restraintsContext::Dihedral_restraintsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GromacsMRParser::Dihedral_restraintsContext::L_brkt() {
  return getToken(GromacsMRParser::L_brkt, 0);
}

tree::TerminalNode* GromacsMRParser::Dihedral_restraintsContext::Dihedral_restraints() {
  return getToken(GromacsMRParser::Dihedral_restraints, 0);
}

tree::TerminalNode* GromacsMRParser::Dihedral_restraintsContext::R_brkt() {
  return getToken(GromacsMRParser::R_brkt, 0);
}

std::vector<GromacsMRParser::Dihedral_restraintContext *> GromacsMRParser::Dihedral_restraintsContext::dihedral_restraint() {
  return getRuleContexts<GromacsMRParser::Dihedral_restraintContext>();
}

GromacsMRParser::Dihedral_restraintContext* GromacsMRParser::Dihedral_restraintsContext::dihedral_restraint(size_t i) {
  return getRuleContext<GromacsMRParser::Dihedral_restraintContext>(i);
}


size_t GromacsMRParser::Dihedral_restraintsContext::getRuleIndex() const {
  return GromacsMRParser::RuleDihedral_restraints;
}


std::any GromacsMRParser::Dihedral_restraintsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GromacsMRParserVisitor*>(visitor))
    return parserVisitor->visitDihedral_restraints(this);
  else
    return visitor->visitChildren(this);
}

GromacsMRParser::Dihedral_restraintsContext* GromacsMRParser::dihedral_restraints() {
  Dihedral_restraintsContext *_localctx = _tracker.createInstance<Dihedral_restraintsContext>(_ctx, getState());
  enterRule(_localctx, 6, GromacsMRParser::RuleDihedral_restraints);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(GromacsMRParser::L_brkt);
    setState(65);
    match(GromacsMRParser::Dihedral_restraints);
    setState(66);
    match(GromacsMRParser::R_brkt);
    setState(68); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(67);
      dihedral_restraint();
      setState(70); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == GromacsMRParser::Integer);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Dihedral_restraintContext ------------------------------------------------------------------

GromacsMRParser::Dihedral_restraintContext::Dihedral_restraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GromacsMRParser::Dihedral_restraintContext::Integer() {
  return getTokens(GromacsMRParser::Integer);
}

tree::TerminalNode* GromacsMRParser::Dihedral_restraintContext::Integer(size_t i) {
  return getToken(GromacsMRParser::Integer, i);
}

std::vector<GromacsMRParser::NumberContext *> GromacsMRParser::Dihedral_restraintContext::number() {
  return getRuleContexts<GromacsMRParser::NumberContext>();
}

GromacsMRParser::NumberContext* GromacsMRParser::Dihedral_restraintContext::number(size_t i) {
  return getRuleContext<GromacsMRParser::NumberContext>(i);
}

tree::TerminalNode* GromacsMRParser::Dihedral_restraintContext::Simple_name() {
  return getToken(GromacsMRParser::Simple_name, 0);
}


size_t GromacsMRParser::Dihedral_restraintContext::getRuleIndex() const {
  return GromacsMRParser::RuleDihedral_restraint;
}


std::any GromacsMRParser::Dihedral_restraintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GromacsMRParserVisitor*>(visitor))
    return parserVisitor->visitDihedral_restraint(this);
  else
    return visitor->visitChildren(this);
}

GromacsMRParser::Dihedral_restraintContext* GromacsMRParser::dihedral_restraint() {
  Dihedral_restraintContext *_localctx = _tracker.createInstance<Dihedral_restraintContext>(_ctx, getState());
  enterRule(_localctx, 8, GromacsMRParser::RuleDihedral_restraint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(GromacsMRParser::Integer);
    setState(73);
    match(GromacsMRParser::Integer);
    setState(74);
    match(GromacsMRParser::Integer);
    setState(75);
    match(GromacsMRParser::Integer);
    setState(76);
    match(GromacsMRParser::Integer);
    setState(77);
    number();
    setState(78);
    number();
    setState(79);
    number();
    setState(81);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GromacsMRParser::Simple_name) {
      setState(80);
      match(GromacsMRParser::Simple_name);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Orientation_restraintsContext ------------------------------------------------------------------

GromacsMRParser::Orientation_restraintsContext::Orientation_restraintsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GromacsMRParser::Orientation_restraintsContext::L_brkt() {
  return getToken(GromacsMRParser::L_brkt, 0);
}

tree::TerminalNode* GromacsMRParser::Orientation_restraintsContext::Orientation_restraints() {
  return getToken(GromacsMRParser::Orientation_restraints, 0);
}

tree::TerminalNode* GromacsMRParser::Orientation_restraintsContext::R_brkt() {
  return getToken(GromacsMRParser::R_brkt, 0);
}

std::vector<GromacsMRParser::Orientation_restraintContext *> GromacsMRParser::Orientation_restraintsContext::orientation_restraint() {
  return getRuleContexts<GromacsMRParser::Orientation_restraintContext>();
}

GromacsMRParser::Orientation_restraintContext* GromacsMRParser::Orientation_restraintsContext::orientation_restraint(size_t i) {
  return getRuleContext<GromacsMRParser::Orientation_restraintContext>(i);
}


size_t GromacsMRParser::Orientation_restraintsContext::getRuleIndex() const {
  return GromacsMRParser::RuleOrientation_restraints;
}


std::any GromacsMRParser::Orientation_restraintsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GromacsMRParserVisitor*>(visitor))
    return parserVisitor->visitOrientation_restraints(this);
  else
    return visitor->visitChildren(this);
}

GromacsMRParser::Orientation_restraintsContext* GromacsMRParser::orientation_restraints() {
  Orientation_restraintsContext *_localctx = _tracker.createInstance<Orientation_restraintsContext>(_ctx, getState());
  enterRule(_localctx, 10, GromacsMRParser::RuleOrientation_restraints);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(GromacsMRParser::L_brkt);
    setState(84);
    match(GromacsMRParser::Orientation_restraints);
    setState(85);
    match(GromacsMRParser::R_brkt);
    setState(87); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(86);
      orientation_restraint();
      setState(89); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == GromacsMRParser::Integer);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Orientation_restraintContext ------------------------------------------------------------------

GromacsMRParser::Orientation_restraintContext::Orientation_restraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GromacsMRParser::Orientation_restraintContext::Integer() {
  return getTokens(GromacsMRParser::Integer);
}

tree::TerminalNode* GromacsMRParser::Orientation_restraintContext::Integer(size_t i) {
  return getToken(GromacsMRParser::Integer, i);
}

std::vector<GromacsMRParser::NumberContext *> GromacsMRParser::Orientation_restraintContext::number() {
  return getRuleContexts<GromacsMRParser::NumberContext>();
}

GromacsMRParser::NumberContext* GromacsMRParser::Orientation_restraintContext::number(size_t i) {
  return getRuleContext<GromacsMRParser::NumberContext>(i);
}

tree::TerminalNode* GromacsMRParser::Orientation_restraintContext::Simple_name() {
  return getToken(GromacsMRParser::Simple_name, 0);
}


size_t GromacsMRParser::Orientation_restraintContext::getRuleIndex() const {
  return GromacsMRParser::RuleOrientation_restraint;
}


std::any GromacsMRParser::Orientation_restraintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GromacsMRParserVisitor*>(visitor))
    return parserVisitor->visitOrientation_restraint(this);
  else
    return visitor->visitChildren(this);
}

GromacsMRParser::Orientation_restraintContext* GromacsMRParser::orientation_restraint() {
  Orientation_restraintContext *_localctx = _tracker.createInstance<Orientation_restraintContext>(_ctx, getState());
  enterRule(_localctx, 12, GromacsMRParser::RuleOrientation_restraint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(GromacsMRParser::Integer);
    setState(92);
    match(GromacsMRParser::Integer);
    setState(93);
    match(GromacsMRParser::Integer);
    setState(94);
    match(GromacsMRParser::Integer);
    setState(95);
    match(GromacsMRParser::Integer);
    setState(96);
    number();
    setState(97);
    number();
    setState(98);
    number();
    setState(99);
    number();
    setState(101);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GromacsMRParser::Simple_name) {
      setState(100);
      match(GromacsMRParser::Simple_name);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Angle_restraintsContext ------------------------------------------------------------------

GromacsMRParser::Angle_restraintsContext::Angle_restraintsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GromacsMRParser::Angle_restraintsContext::L_brkt() {
  return getToken(GromacsMRParser::L_brkt, 0);
}

tree::TerminalNode* GromacsMRParser::Angle_restraintsContext::Angle_restraints() {
  return getToken(GromacsMRParser::Angle_restraints, 0);
}

tree::TerminalNode* GromacsMRParser::Angle_restraintsContext::R_brkt() {
  return getToken(GromacsMRParser::R_brkt, 0);
}

std::vector<GromacsMRParser::Angle_restraintContext *> GromacsMRParser::Angle_restraintsContext::angle_restraint() {
  return getRuleContexts<GromacsMRParser::Angle_restraintContext>();
}

GromacsMRParser::Angle_restraintContext* GromacsMRParser::Angle_restraintsContext::angle_restraint(size_t i) {
  return getRuleContext<GromacsMRParser::Angle_restraintContext>(i);
}


size_t GromacsMRParser::Angle_restraintsContext::getRuleIndex() const {
  return GromacsMRParser::RuleAngle_restraints;
}


std::any GromacsMRParser::Angle_restraintsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GromacsMRParserVisitor*>(visitor))
    return parserVisitor->visitAngle_restraints(this);
  else
    return visitor->visitChildren(this);
}

GromacsMRParser::Angle_restraintsContext* GromacsMRParser::angle_restraints() {
  Angle_restraintsContext *_localctx = _tracker.createInstance<Angle_restraintsContext>(_ctx, getState());
  enterRule(_localctx, 14, GromacsMRParser::RuleAngle_restraints);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(GromacsMRParser::L_brkt);
    setState(104);
    match(GromacsMRParser::Angle_restraints);
    setState(105);
    match(GromacsMRParser::R_brkt);
    setState(107); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(106);
      angle_restraint();
      setState(109); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == GromacsMRParser::Integer);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Angle_restraintContext ------------------------------------------------------------------

GromacsMRParser::Angle_restraintContext::Angle_restraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
